# shaffuru

./: Cargo.toml  README.md
src/: lib.rs  main.rs  permutation.rs  rotation.rs
